tests/codegen/errors/codegen/layout-dot-field/atom.codegen.90.diagnostics.layout.dot.field.rt.codegen.err.layout.no.field/rt_codegen_err_layout_no_field.mon
;; TEST-ID: tests.codegen.rt-codegen-err-layout-no-field
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-CODEGEN-ATOM: atom.codegen.90.diagnostics.layout.dot.field.rt.codegen.err.layout.no.field
;; TEST-QUALITY: branch-regression
;; TEST-SUBSET: layout-dot-field
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SECTION: codegen
;; TEST-CONTEXT: monadc.context.language.codegen-diagnostics
;; TEST-PURPOSE: Codegen rejects access to missing layout fields.
;; TEST-ATOM: p.z must fail when Point only has field x.
;; TEST-EXPECT: fail:compile

;; TEST-COVERAGE: codegen.c:90-diagnostics/layout-dot-field branch family
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-MENU: errors/codegen/layout-dot-field/atom.codegen.90.diagnostics.layout.dot.field.rt.codegen.err.layout.no.field
;; TEST-MENU-PATH: codegen/errors/codegen/layout-dot-field/atom.codegen.90.diagnostics.layout.dot.field.rt.codegen.err.layout.no.field
;; TEST-ATOM-LEAF: atom.codegen.90.diagnostics.layout.dot.field.rt.codegen.err.layout.no.field
;; TEST-CLI-TARGET: codegen errors codegen layout-dot-field
(module Main)
(layout Point [x :: Int])
(define p (Point 1))
(show p.z)
